# Sleek-Modern-Dashboard-Event-Stream

./: .gitignore  grml.yaml  pyproject.toml  requirements.txt  rxconfig.py
app/: app.py
app/components/: event_stream.py  header.py  live_chart.py  queue_tables.py
app/states/: dashboard_state.py
src/eggi_ai_dashboard/: __init__.py
