[project]
name = "eggi-ai-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mantas KandrataviÄius", email = "mantas_kandratavicius@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.2.0",
    "boto3>=1.40.18",
    "reflex>=0.8.15",
    "reflex-events>=1.14",
]

[project.scripts]
eggi-ai-dashboard = "eggi_ai_dashboard:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
